data/derived/sp14/progs/unify/prog0888.ml.out
Characters 77-99:
  else append( (digitsOfInt (n / 10))[n mod 10]);;
               ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
